--- a/style.css
+++ b/style.css
@@ -1,47 +1,47 @@
-html {
-    width:100%;
-    height:100%;
-    margin:0;
-    /* overflow: hidden; */
-}
-body {
-    width:100%;
-    height:100%;
+
+* { 
+    box-sizing: border-box; 
+  }
+  html {
+    margin: 0;
+    background-size: cover;
+    background-blend-mode: darken;
+    transition: 2s;
+  }
+  body { 
+    margin: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: #fff;
-    margin:0;
-    background-color: #000;
-
 }
+  div#texttop { 
+      color: #fff;
+      width: 30%;
+      margin-top: 5%;
+      margin-left: 5%;
+      padding: 2rem;
+      border: 4px double rgba(255,255,255,0.3);
+      background: rgba(0,0,0,0.3);
+      font-family: Oxygen, sans-serif;
+  }
+  h1 { 
+    margin-top: 0; 
+    text-align: center;
+    font-weight: 100;
+  }
+  p { 
+     line-height: 1.6; 
+    }
+  @media all and (max-width: 770px) {
+      div#texttop { display: none; }
+  }
+
 h1 {
     padding:0px;
     margin: 10px
 }
-/* #gallery-background-container{
-    position:relative;
-    height:100%;
-    width:100%;
-    margin:0 auto;
-}  */
 #button-container{
     margin-left:5%;
     margin-top:5%;
-}
-#gallery-background {
-    width:100%;
-    height:100%;
-    background-image: url('/images/slideshow/group1.jpg');
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    margin:0;
-    /* position: absolute;
-    left:0;
-    -webkit-transition: opacity 2s ease-in-out;
-    -moz-transition: opacity 2s ease-in-out;
-    -o-transition: opacity 2s ease-in-out;
-    transition: opacity 2s ease-in-out; */
-
 }
 
 .info-card {
